Removed use of deprecated URL constructors